- fixed typos - added acronyms - improvements mainly in the chapter "Verification of consistency"

--- a/documentation/latex/chapter-chronological-desc.tex
+++ b/documentation/latex/chapter-chronological-desc.tex
@@ -19,5 +19,6 @@ March 2012 & second release and defense of the project.\\
 
 
 \end{center}
+\caption{Chronological description of the project}
 \end{table}    
  
