--- a/documentation/latex/reprotool.tex
+++ b/documentation/latex/reprotool.tex
@@ -5,7 +5,12 @@
 	\acrodef{UML}[UML]{Unified Modeling Language}
 	\acrodef{IDE}[IDE]{Integrated Development Environment}
 	\acrodef{LTS}[LTS]{Labelled Transition System}
-
+	\acrodef{EMF}[EMF]{Eclipse Modeling Framework}
+	\acrodef{RCP}[RCP]{Rich Client Platform}
+	\acrodef{LTL}[LTL]{Linear Temporal Logic}
+	\acrodef{CTL}[CTL]{Computational Tree Logic}
+	\acrodef{DSL}[DSL]{Domain Specific Language}
+	\acrodef{AST}[AST]{Abstract Syntax Tree}
 \usepackage[utf8]{inputenc}
 
 \usepackage{varioref} % vref command
@@ -63,7 +68,7 @@
 % NuSMV Input Language
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \lstdefinelanguage{NuSMVLang}{
- ndkeywords={MODULE, DEFINE, VAR, INIT, ASSIGN, TRUE, FALSE, CTLSPEC, LTLSPEC, FAIRNESS, AX, A, AG, AF, U, boolean, next, init, case, esac, in},
+ ndkeywords={MODULE, DEFINE, VAR, INIT, ASSIGN, TRUE, FALSE, CTLSPEC, LTLSPEC, FAIRNESS, AX, A, AG, AF, EF, U, boolean, next, init, case, esac, in},
  ndkeywordstyle=\color{Purple}\bfseries,
  identifierstyle=\color{black},
  sensitive=true,
